added boulders and growing, spawning trees

--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
                 <button class="zoom-button" onclick="zoomOut()">-</button>
                 <button class="zoom-button" onclick="zoomIn()">+</button>
             </div>
-        </div>
-    </div>    <script src="biome-generator.js"></script>
+        </div>    </div>    <script src="config.js"></script>
+    <script src="biome-generator.js"></script>
     <script src="game.js"></script>
 </body>
 </html>
