code refactoring - WIP

--- a/index.html
+++ b/index.html
@@ -282,9 +282,6 @@
             <div class="zoom-controls-overlay">
                 <button class="zoom-button" onclick="zoomOut()">-</button>
                 <button class="zoom-button" onclick="zoomIn()">+</button>
-            </div>
-        </div></div>    <script src="config.js"></script>
-    <script src="biome-generator.js"></script>
-    <script src="game.js"></script>
+            </div>        </div></div>    <script type="module" src="game-new.js"></script>
 </body>
 </html>
