--- a/index.html
+++ b/index.html
@@ -219,10 +219,105 @@
             border-radius: 4px;
             cursor: pointer;
             font-size: 1rem;
+        }        .zoom-button:hover {
+            background: #2980b9;
         }
 
-        .zoom-button:hover {
-            background: #2980b9;
+        .character-info-panel {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            width: 250px;
+            background: rgba(0,0,0,0.9);
+            border-radius: 8px;
+            padding: 0;
+            color: white;
+            max-height: 400px;
+            overflow-y: auto;
+            border: 1px solid #34495e;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+        }
+
+        .panel-header {
+            background: #34495e;
+            padding: 10px 15px;
+            border-radius: 8px 8px 0 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .panel-header h3 {
+            margin: 0;
+            font-size: 1.1rem;
+        }
+
+        .close-btn {
+            background: none;
+            border: none;
+            color: white;
+            font-size: 1.2rem;
+            cursor: pointer;
+            padding: 0;
+            width: 20px;
+            height: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .close-btn:hover {
+            background: rgba(255,255,255,0.1);
+            border-radius: 3px;
+        }
+
+        .panel-content {
+            padding: 15px;
+        }
+
+        .section {
+            margin-bottom: 15px;
+        }
+
+        .section h4 {
+            margin: 0 0 8px 0;
+            font-size: 0.9rem;
+            color: #bdc3c7;
+            text-transform: uppercase;
+            font-weight: bold;
+        }
+
+        .need-item, .skill-item, .trait-item {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 4px;
+            font-size: 0.85rem;
+        }
+
+        .need-bar, .skill-bar {
+            width: 60px;
+            height: 8px;
+            background: #2c3e50;
+            border-radius: 4px;
+            overflow: hidden;
+        }
+
+        .need-fill, .skill-fill {
+            height: 100%;
+            transition: width 0.3s ease;
+        }
+
+        .need-fill {
+            background: linear-gradient(90deg, #e74c3c 0%, #f39c12 50%, #27ae60 100%);
+        }
+
+        .skill-fill {
+            background: linear-gradient(90deg, #95a5a6 0%, #3498db 50%, #9b59b6 100%);
+        }
+
+        .trait-item {
+            color: #f39c12;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -282,6 +377,31 @@
             <div class="zoom-controls-overlay">
                 <button class="zoom-button" onclick="zoomOut()">-</button>
                 <button class="zoom-button" onclick="zoomIn()">+</button>
-            </div>        </div></div>    <script type="module" src="game-new.js"></script>
+            </div>
+            <div class="character-info-panel" id="characterInfoPanel" style="display: none;">
+                <div class="panel-header">
+                    <h3>Character <span id="selectedCharacterId">0</span></h3>
+                    <button class="close-btn" onclick="hideCharacterInfo()">×</button>
+                </div>
+                <div class="panel-content">
+                    <div class="section">
+                        <h4>Current Need</h4>
+                        <div id="currentNeed">-</div>
+                    </div>
+                    <div class="section">
+                        <h4>Needs</h4>
+                        <div id="needsList"></div>
+                    </div>
+                    <div class="section">
+                        <h4>Skills</h4>
+                        <div id="skillsList"></div>
+                    </div>
+                    <div class="section">
+                        <h4>Traits</h4>
+                        <div id="traitsList"></div>
+                    </div>
+                </div>
+            </div>
+        </div></div>    <script type="module" src="game-new.js"></script>
 </body>
 </html>
