added character images, refactoring

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     <div class="screen start-screen active" id="startScreen">
         <h1 class="game-title">TRIBES</h1>
         <div class="menu">
-            <button class="menu-button" onclick="showNewGameScreen()">Start New Game</button>
+            <button class="menu-button" id="startNewGameButton">Start New Game</button>
             <button class="menu-button" onclick="loadGame()">Load Game</button>
             <button class="menu-button" onclick="showSettings()">Settings</button>
             <button class="menu-button" onclick="exitGame()">Exit</button>
