extracted css from index.html

--- a/index.html
+++ b/index.html
@@ -4,378 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tribes Game</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #2c3e50 0%, #3498db 100%);
-            color: white;
-            overflow: hidden;
-            height: 100vh;
-        }
-
-        .screen {
-            display: none;
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-
-        .screen.active {
-            display: flex;
-        }
-
-        /* Start Screen Styles */
-        .start-screen {
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        }
-
-        .game-title {
-            font-size: 4rem;
-            font-weight: bold;
-            margin-bottom: 3rem;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
-        }
-
-        .menu-button {
-            background: linear-gradient(45deg, #ff6b6b, #ee5a52);
-            border: none;
-            color: white;
-            padding: 15px 40px;
-            margin: 10px;
-            font-size: 1.2rem;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-            min-width: 200px;
-        }
-
-        .menu-button:hover {
-            background: linear-gradient(45deg, #ff8e8e, #ff7575);
-            transform: translateY(-2px);
-            box-shadow: 0 6px 12px rgba(0,0,0,0.4);
-        }
-
-        /* New Game Screen Styles */
-        .new-game-screen {
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background: linear-gradient(135deg, #4ecdc4 0%, #44a08d 100%);
-        }
-
-        .config-panel {
-            background: rgba(255,255,255,0.1);
-            padding: 2rem;
-            border-radius: 15px;
-            backdrop-filter: blur(10px);
-            box-shadow: 0 8px 32px rgba(0,0,0,0.3);
-        }
-
-        .config-title {
-            font-size: 2.5rem;
-            text-align: center;
-            margin-bottom: 2rem;
-        }
-
-        .config-group {
-            margin-bottom: 1.5rem;
-        }
-
-        .config-label {
-            display: block;
-            margin-bottom: 0.5rem;
-            font-size: 1.1rem;
-            font-weight: bold;
-        }        .config-input {
-            width: 100%;
-            padding: 10px;
-            font-size: 1rem;
-            border: none;
-            border-radius: 5px;
-            background: rgba(255,255,255,0.9);
-            color: #333;
-            outline: none;
-            pointer-events: auto;
-        }
-
-        .config-input:focus {
-            background: rgba(255,255,255,1);
-            box-shadow: 0 0 0 2px #3498db;
-        }
-
-        .button-group {
-            display: flex;
-            gap: 1rem;
-            justify-content: center;
-            margin-top: 2rem;
-        }
-
-        .secondary-button {
-            background: linear-gradient(45deg, #95a5a6, #7f8c8d);
-        }
-
-        .secondary-button:hover {
-            background: linear-gradient(45deg, #bdc3c7, #95a5a6);
-        }
-
-        /* Gameplay Screen Styles */
-        .gameplay-screen {
-            flex-direction: column;
-            background: #2c3e50;
-        }
-
-        .game-header {
-            height: 60px;
-            background: rgba(0,0,0,0.8);
-            display: flex;
-            align-items: center;
-            padding: 0 1rem;
-            justify-content: space-between;
-        }
-
-        .game-info {
-            display: flex;
-            gap: 2rem;
-        }
-
-        .info-item {
-            font-size: 1rem;
-            font-weight: bold;
-        }
-
-        .game-viewport {
-            flex: 1;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .game-map {
-            position: absolute;
-            display: grid;
-            transition: transform 0.1s ease;
-        }
-
-        .terrain-tile {
-            border: 1px solid rgba(255,255,255,0.1);
-            position: relative;
-        }        .terrain-grass { background-color: #27ae60; }
-        .terrain-rock { background-color: #7f8c8d; }
-        .terrain-water { background-color: #3498db; }
-        .terrain-snow { background-color: #ecf0f1; }
-        .terrain-sand { background-color: #f39c12; }
-
-        .character {
-            background-color: #e74c3c !important;
-            border-radius: 2px;
-            border: 1px solid #c0392b;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.3);
-        }        .zoom-controls-overlay {
-            position: absolute;
-            bottom: 20px;
-            right: 20px;
-            display: flex;
-            gap: 0.5rem;
-            background: rgba(0,0,0,0.7);
-            padding: 0.5rem;
-            border-radius: 8px;
-        }
-
-        .game-controls {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            background: rgba(0,0,0,0.7);
-            padding: 1rem;
-            border-radius: 8px;
-        }
-
-        .control-info {
-            font-size: 0.9rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .zoom-controls {
-            display: flex;
-            gap: 0.5rem;
-        }
-
-        .zoom-button {
-            background: #3498db;
-            border: none;
-            color: white;
-            padding: 8px 12px;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 1rem;
-        }        .zoom-button:hover {
-            background: #2980b9;
-        }
-
-        /* Settings Screen Styles */
-        .settings-group {
-            margin-bottom: 2rem;
-        }
-
-        .settings-group h3 {
-            color: #2c3e50;
-            margin-bottom: 1rem;
-            font-size: 1.1rem;
-            border-bottom: 1px solid #bdc3c7;
-            padding-bottom: 0.5rem;
-        }
-
-        .config-checkbox {
-            width: auto;
-            margin: 0;
-        }
-
-        .config-range {
-            width: 60%;
-            margin-right: 10px;
-        }
-
-        #masterVolumeValue {
-            font-weight: bold;
-            color: #3498db;
-        }
-
-        /* Character name labels */
-        .character-name-label,
-        .character-action-label {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        .character-info-panel {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            width: 250px;
-            background: rgba(0,0,0,0.9);
-            border-radius: 8px;
-            padding: 0;
-            color: white;
-            max-height: 400px;
-            overflow-y: auto;
-            border: 1px solid #34495e;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-        }
-
-        .panel-header {
-            background: #34495e;
-            padding: 10px 15px;
-            border-radius: 8px 8px 0 0;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .panel-header h3 {
-            margin: 0;
-            font-size: 1.1rem;
-        }
-
-        .close-btn {
-            background: none;
-            border: none;
-            color: white;
-            font-size: 1.2rem;
-            cursor: pointer;
-            padding: 0;
-            width: 20px;
-            height: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .close-btn:hover {
-            background: rgba(255,255,255,0.1);
-            border-radius: 3px;
-        }
-
-        .panel-content {
-            padding: 15px;
-        }
-
-        .section {
-            margin-bottom: 15px;
-        }
-
-        .section h4 {
-            margin: 0 0 8px 0;
-            font-size: 0.9rem;
-            color: #bdc3c7;
-            text-transform: uppercase;
-            font-weight: bold;
-        }
-
-        .need-item, .skill-item, .trait-item {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 4px;
-            font-size: 0.85rem;
-        }
-
-        .need-bar, .skill-bar {
-            width: 60px;
-            height: 8px;
-            background: #2c3e50;
-            border-radius: 4px;
-            overflow: hidden;
-        }
-
-        .need-fill, .skill-fill {
-            height: 100%;
-            transition: width 0.3s ease;
-        }
-
-        .need-fill {
-            background: linear-gradient(90deg, #e74c3c 0%, #f39c12 50%, #27ae60 100%);
-        }
-
-        .skill-fill {
-            background: linear-gradient(90deg, #95a5a6 0%, #3498db 50%, #9b59b6 100%);
-        }
-
-        .trait-item {
-            color: #f39c12;
-            font-weight: bold;
-        }
-
-        /* Settings Screen Styles */
-        .settings-screen {
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background: linear-gradient(135deg, #4a69bd 0%, #6f86d6 100%);
-        }
-
-        .settings-group {
-            margin-bottom: 2rem;
-        }
-
-        .config-checkbox {
-            transform: scale(1.2);
-            margin-left: 0.5rem;
-        }
-
-        .config-range {
-            width: 100%;
-            margin-top: 0.5rem;
-        }
-    </style>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/start-screen.css">
+    <link rel="stylesheet" href="css/new-game.css">
+    <link rel="stylesheet" href="css/gameplay.css">
+    <link rel="stylesheet" href="css/characters.css">
+    <link rel="stylesheet" href="css/settings.css">
 </head>
 <body>
     <!-- Start Screen -->
